# Brick-breaker

./: CMakeLists.txt  main  random_walker_graphics  random_walker_graphics.cpp
include/: background.h  ball.h  brick.h  constants.h  entity.h  game.h  interactions.h  moving_entity.h  paddle.h
src/: background.cpp  ball.cpp  brick.cpp  entity.cpp  game.cpp  interactions.cpp  paddle.cpp
